# cps-embedded-c-lab

./: CMakeLists.txt  README.md
lecture_1/: CMakeLists.txt
lecture_1/blink/: blink.c
lecture_1/custom_effect/: CMakeLists.txt
lecture_1/sliding_led/: CMakeLists.txt
lecture_2/: CMakeLists.txt
lecture_2/compiled_binaries/: i2c_bus_scan.uf2  test_adc_microphone.uf2  test_adc_voltage.uf2  test_adxl345.uf2  test_all_sensors.uf2  test_led.uf2  test_pac193x.uf2  test_sht31.uf2
lecture_2/i2c_bus_scan/: CMakeLists.txt  i2c_bus_scan.c
lecture_2/pwm/: pwm.c
lecture_2/rainbow_led/: rainbow_led.c
lecture_2/square_wave/: square_wave.c
lecture_2/test_adc_microphone/: CMakeLists.txt  test_adc_microphone.c
lecture_2/test_adc_voltage/: CMakeLists.txt  test_adc_voltage.c
lecture_2/test_adxl345/: CMakeLists.txt  test_adxl345.c
lecture_2/test_all_sensors/: CMakeLists.txt  test_all_sensors.c
lecture_2/test_led/: CMakeLists.txt  test_led.c
lecture_2/test_pac193x/: CMakeLists.txt  test_pac193x.c
lecture_2/test_sht31/: CMakeLists.txt  test_sht31.c
lecture_3/: CMakeLists.txt
lecture_3/blink/: blink.c
lecture_3/button_states_simple/: button_states_simple.c
lecture_3/button_without_state_detection/: button_without_state_detection.c
lecture_3/circuit_issues/: CMakeLists.txt
lecture_3/custom_effect/: custom_effect.c
lecture_3/increasing_led/: CMakeLists.txt
lecture_3/sliding_led/: sliding_led.c
lecture_4/: CMakeLists.txt
lecture_4/pwm/: pwm.c
lecture_4/rainbow_led/: CMakeLists.txt
lecture_4/square_wave/: square_wave.c
lecture_4/square_waves/: CMakeLists.txt  delay_based.c  pwm_based.c  timer_based.c
lecture_5/: CMakeLists.txt
lecture_5/button_denoising/: CMakeLists.txt  button_denoising.c
lecture_5/button_states/: CMakeLists.txt  advanced.c  simple.c
lecture_5/denoised_button/: denoised_button.c
lecture_5/naive_button/: CMakeLists.txt  naive_button.c
lecture_6/: CMakeLists.txt
lecture_6/test_data_adc_10_times/: CMakeLists.txt  test_data_adc_10_times.c
lecture_6/test_data_adc_batch_reading/: CMakeLists.txt  test_data_adc_batch_reading.c
lecture_6/test_echo/: CMakeLists.txt  test_echo.c
lecture_6/test_hello/: CMakeLists.txt  test_hello.c
lecture_7/mcu_temperature/: mcu_temperature.c
lecture_7/moving_ball/: moving_ball.c
lecture_8/: CMakeLists.txt
lecture_8/speech_recognize/: CMakeLists.txt  adc_buffer.cpp  adc_buffer.h  audio_buffer.h  audio_provider.cpp  audio_provider.h  feature_provider.cpp  feature_provider.h  main.cpp  readme.md  ring_block_buffer.h  utility_macro.h
lecture_8/test_upload_microphone_data/: CMakeLists.txt  test_upload_microphone_data.c
lecture_8/test_upload_microphone_data/scripts/: audio_data_plot.py  readme.md  serial_receive.py
lib/: CMakeLists.txt
lib/hardware_setup/: CMakeLists.txt  hardware_setup.c
lib/hardware_setup/include/: hardware_setup.h
lib/prime_test/: CMakeLists.txt  prime_test.c
lib/prime_test/include/: prime_test.h
lib/sensor_lib/: CMakeLists.txt  adxl345.c  pac193x.c  sht31.c
lib/sensor_lib/include/: pac193x.h  sht31.h
