add_executable(test_adc_voltage test_adc_voltage.c)
target_include_directories(test_adc_voltage PUBLIC .)
target_link_libraries(test_adc_voltage pico_stdlib hardware_setup sensor_lib)

pico_enable_stdio_usb(test_adc_voltage 1)
pico_enable_stdio_uart(test_adc_voltage 0)
pico_add_extra_outputs(test_adc_voltage)
